Fix logo alignment issues in the sponsors section

--- a/src/pages/sponsors.module.scss
+++ b/src/pages/sponsors.module.scss
@@ -31,11 +31,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 1em;
   background: white;
 }
 
 .sponsorLogoImage {
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .sponsorName {
